--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/SplashTheme">
-<!--        android:networkSecurityConfig="@xml/network_security_config"-->
+        android:theme="@style/SplashTheme"
+        android:networkSecurityConfig="@xml/network_security_config"> <!--esto es nuevo-->
 
         <activity
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode"
