--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.tissini.webview"
         minSdkVersion 24
         targetSdkVersion 30
-        versionCode 6
-        versionName "3.1.2"
+        versionCode 8
+        versionName "3.1.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -37,6 +37,8 @@ dependencies {
     //esto es lo nuevo
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
+    implementation 'com.google.android.play:core:1.10.0'
     //hasta aca
 
     testImplementation 'junit:junit:4.+'
