--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.tissini.webview"
         minSdkVersion 24
         targetSdkVersion 30
-        versionCode 10
-        versionName "3.1.6"
+        versionCode 11
+        versionName "3.1.7"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -41,6 +41,11 @@ dependencies {
 
     implementation 'com.google.android.play:core:1.10.0'
     //hasta aca
+
+    //jsoup
+    implementation 'org.jsoup:jsoup:1.13.1'
+
+
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
