--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".NotificationsMessagingService">
+        <service android:name=".services.NotificationsMessagingService">
             <intent-filter android:priority="1">
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
