--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.2.3'
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.pusher:push-notifications-android:1.6.2'
+
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.android.gms:play-services-auth-api-phone:17.4.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
