--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
             </intent-filter>
         </service>
 
-        <receiver android:name=".services.SMSBroadcastReceiver" android:exported="true"
+        <receiver android:name=".services.NotificationBroadCastReceiver" android:exported="true"
             android:permission="com.google.android.gms.auth.api.phone.permission.SEND">
             <intent-filter>
                 <action android:name="com.google.android.gms.auth.api.phone.SMS_RETRIEVED"/>
