--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,12 +57,7 @@
             </intent-filter>
         </service>
 
-        <receiver android:name=".services.NotificationBroadCastReceiver" android:exported="true"
-            android:permission="com.google.android.gms.auth.api.phone.permission.SEND">
-            <intent-filter>
-                <action android:name="com.google.android.gms.auth.api.phone.SMS_RETRIEVED"/>
-            </intent-filter>
-        </receiver>
+        <receiver android:name=".services.NotificationBroadCastReceiver" android:exported="true" />
 
         <meta-data android:name="android.max_aspect" android:value="2.1" />
     </application>
