--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,5 +53,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.google.android.gms:play-services-auth-api-phone:17.4.0'
 
+    implementation 'in.mamga:carousalnotification:1.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
