added clickEvent rowRight rowLeft

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:networkSecurityConfig="@xml/network_security_config">
 
         <activity
-            android:name=".CarouselActivity"
+            android:name=".MainActivity"
             android:screenOrientation="portrait">
 
             <intent-filter>
@@ -57,7 +57,15 @@
             </intent-filter>
         </service>
 
-        <receiver android:name=".services.NotificationBroadCastReceiver" android:exported="true"/>
+        <receiver android:name=".receivers.NotificationBroadCastReceiver"
+            android:exported="true">
+        </receiver>
+        <receiver android:name=".receivers.LeftBroadCastReceiver"
+            android:exported="true">
+        </receiver>
+        <receiver android:name=".receivers.RightBroadCastReceiver"
+            android:exported="true">
+        </receiver>
 
         <meta-data android:name="android.max_aspect" android:value="2.1" />
     </application>
